syntax = "proto3";

option csharp_namespace = "Common";
import "google/protobuf/timestamp.proto";

package common;

message CommentDataProto{
	int64 Id = 1;
	int64 CommentId = 2;
	int64 PostId = 3;
	int64 GroupId = 4;
	int64 AuthorId = 5;
	string Text = 6;
	google.protobuf.Timestamp PostDate = 7;
}
